--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               4A616D6573
+# tagline:             An information security and personal education blog
+url:                 http://4a616d6573.com/
 paginate:            1
 baseurl:             ""
 
@@ -17,16 +17,21 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              James Pemberton
+  url:               https://twitter.com/4A616D6573
+#  email:             markdotto@gmail.com
 
 # Custom vars
 version:             2.0.0
-github:
-  repo:              https://github.com/poole/poole
+github:              https://github.com/4A616D6573/
+#   repo:
 
 # Gems
 gems:
   - jekyll-paginate
   - jekyll-gist
+
+pages_list:
+  About: '/about'
+  Archive: '/archive'
+  Feed: '/atom.xml'
